WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216965
Fix LibWebRTCRtpReceiverBackend for internal build
https://bugs.webkit.org/show_bug.cgi?id=216965
Summary
Fix LibWebRTCRtpReceiverBackend for internal build
youenn fablet
Reported
2020-09-25 00:17:45 PDT
Fix LibWebRTCRtpReceiverBackend for internal build
Attachments
Patch
(3.31 KB, patch)
2020-09-25 00:19 PDT
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.23 KB, patch)
2020-09-25 00:35 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-09-25 00:19:38 PDT
Created
attachment 409661
[details]
Patch
youenn fablet
Comment 2
2020-09-25 00:20:01 PDT
<
rdar://problem/69537053
>
youenn fablet
Comment 3
2020-09-25 00:35:37 PDT
Created
attachment 409664
[details]
Patch
EWS
Comment 4
2020-09-25 07:05:40 PDT
Committed
r267566
: <
https://trac.webkit.org/changeset/267566
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409664
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug